// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLayout component should render with active item 1`] = `
<div>
  <section
    class="ins-tab-layout"
    widget-type="InsightsTabs"
  >
    <div
      class="ins-tabs"
    >
      <div
        class="active"
        widget-id="one"
        widget-type="InsightsTabsItem"
      >
        <div>
          one
        </div>
      </div>
      <div
        class=""
        widget-id="two"
        widget-type="InsightsTabsItem"
      >
        two
      </div>
    </div>
    <div
      class="ins-tab-content"
    />
  </section>
</div>
`;

exports[`TabLayout component should render with items 1`] = `
<div>
  <section
    class="ins-tab-layout"
    widget-type="InsightsTabs"
  >
    <div
      class="ins-tabs"
    >
      <div
        class=""
        widget-id="one"
        widget-type="InsightsTabsItem"
      >
        <div>
          one
        </div>
      </div>
      <div
        class=""
        widget-id="two"
        widget-type="InsightsTabsItem"
      >
        two
      </div>
    </div>
    <div
      class="ins-tab-content"
    />
  </section>
</div>
`;

exports[`TabLayout component should render without items 1`] = `
<div>
  <section
    class="ins-tab-layout"
    widget-type="InsightsTabs"
  >
    <div
      class="ins-tabs"
    />
    <div
      class="ins-tab-content"
    />
  </section>
</div>
`;
